--- a/src/main/resources/templates/allEstablishmentsTemplate.html
+++ b/src/main/resources/templates/allEstablishmentsTemplate.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css"></link>
-	<title>Columbus Happy Hours</title>
+<link rel="stylesheet" type="text/css" href="style.css"></link>
+<title>Columbus Happy Hours</title>
 </head>
 <body>
-	<div>
-		<img class="header-pic" src="happyhourbanner.png">
-	</div>
+
+<div>
+	<img class="header-pic" src="/images/happyhourbanner.png"/>
+</div>
+
 	<h1>Columbus Happy Hours!</h1>
-	<div  th:each="current: ${allEstablishments}">
+
+	<div th:each="current: ${allEstablishments}">
 		<ul>
-			<li th:text="${current.name + ' ' + current.address + ' lat:' + current.latitude + ' lng:' + current.longitude}" />
+			<li
+				th:text="${current.name + ' ' + current.address + ' lat:' + current.latitude + ' lng:' + current.longitude}" />
 		</ul>
 	</div>
 
@@ -19,6 +23,8 @@
 
 
 	<script type="text/javascript" src="script.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvBn0qXhg90EpwLux8kRi4_NKEf6VphKg&callback=initMap"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxlN41yXZT13zNWkyEbNue7sKeI5V8ZxI&amp;callback=initMap"></script> 
+
 </body>
+
 </html>
