--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -8,7 +8,55 @@ body {
 	height: 700px;
 }
 
+.logo {
+	width: 200px;
+	height: auto;
+}
+
 #googleMap {
 	width: 400px;
 	height: 300px;
+}
+
+.navbar {
+	padding: 30px;
+	background-color: rgba(0, 0, 0, 0.5);
+	transition: background-color .5s ease 0s;
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
+
+.navbar.opaque {
+    background-color: rgba(0, 0, 0, 1.0);
+    transition: background-color .5s ease 0s;
+}
+
+/* @media (max-width: 992px) {
+  body
+  {
+    background:none;
+  }
+  .navbar {
+    background-color: black;
+    height: 60px;
+    transition: background-color .5s ease 0s;
+}*/
+
+
+
+.navbar ul {
+	display: inline-flex;
+	justify-content: space-between;
+	list-style: none;
+	position: absolute;
+	right: 150px;
+}
+
+
+
+.navbar ul li a {
+	text-decoration: none;
+	padding: 5px;
+	color: white;
 }
