--- a/src/main/resources/templates/allEstablishmentsTemplate.html
+++ b/src/main/resources/templates/allEstablishmentsTemplate.html
@@ -5,10 +5,18 @@
 <title>Columbus Happy Hours</title>
 </head>
 <body>
-
-<div>
-	<img class="header-pic" src="/images/happyhourbanner.png"/>
-</div>
+	<header>
+		<nav class="navbar">
+		<img class="logo" src="/images/happy.jpg"/>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+			</ul>
+		</nav>
+	</header>
+	<div>
+		<img class="header-pic" src="/images/happyhourbanner.png" />
+	</div>
 
 	<h1>Columbus Happy Hours!</h1>
 
@@ -21,9 +29,13 @@
 
 	<div id="googleMap"></div>
 
-
+	<script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
 	<script type="text/javascript" src="script.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxlN41yXZT13zNWkyEbNue7sKeI5V8ZxI&amp;callback=initMap"></script> 
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxlN41yXZT13zNWkyEbNue7sKeI5V8ZxI&amp;callback=initMap"></script>
 
 </body>
 
