created rest controller, test is failing

--- a/src/main/resources/templates/allEstablishmentsTemplate.html
+++ b/src/main/resources/templates/allEstablishmentsTemplate.html
@@ -21,9 +21,9 @@
 	<h1>Columbus Happy Hours!</h1>
 
 	<div th:each="current: ${allEstablishments}">
-		<ul>
+		<ul id="establishmentsList">
 			<li
-				th:text="${current.name + ' ' + current.address + ' lat:' + current.latitude + ' lng:' + current.longitude}" />
+				th:text="${current.name + ' ' + current.address + ' lat:' + current.latitude + ' lng:' + current.longitude + ' Phone Number: ' + current.phoneNumber}" />
 		</ul>
 	</div>
 
