--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -13,9 +13,23 @@ body {
 	height: auto;
 }
 
+.lower-page-container {
+	display: flex;
+	align-items: center;
+}
+
+.filter-sidebar {
+	background-color: black;
+	color: white;
+	padding-left: 20px;
+	height: 500px;
+	width: 300px;
+}
+
 #googleMap {
-	width: 400px;
-	height: 300px;
+	margin-left: 20px;
+	width: 600px;
+	height: 500px;
 }
 
 .navbar {
