--- a/src/main/resources/templates/allEstablishmentsTemplate.html
+++ b/src/main/resources/templates/allEstablishmentsTemplate.html
@@ -35,6 +35,7 @@
 	<label>Start Time: <input name="startTime"/></label>
 	<label>End Time: <input name="endTime"/></label>
 	<button name="generateMarkersByTime">Find by Schedule</button>
+	<div id="schedule-content"></div>
 	</div>
 </div>
 	<div id="googleMap"></div>
