modified js - markers still not pulling from correct json path in initMap

--- a/src/main/resources/templates/allEstablishmentsTemplate.html
+++ b/src/main/resources/templates/allEstablishmentsTemplate.html
@@ -34,7 +34,7 @@
 	<div class="schedule-filter">
 	<label>Start Time: <input name="startTime"/></label>
 	<label>End Time: <input name="endTime"/></label>
-	<button name="generateMarkersByTime">Find by Schedule</button>
+	<button id="generateMarkersByTime" name="generateMarkersByTime">Find by Schedule</button>
 	<div id="schedule-content"></div>
 	</div>
 </div>
