--- a/src/main/resources/templates/allEstablishmentsTemplate.html
+++ b/src/main/resources/templates/allEstablishmentsTemplate.html
@@ -7,7 +7,7 @@
 <body>
 	<header>
 		<nav class="navbar">
-		<img class="logo" src="/images/happy.jpg"/>
+			<img class="logo" src="/images/happy.jpg" />
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About</a></li>
@@ -22,29 +22,34 @@
 
 	<div th:each="current: ${allEstablishments}">
 		<ul id="establishmentsList">
-			<li th:text="${current.schedule}"/>
+			<li th:text="${current.schedule}" />
 			<li
 				th:text="${current.name + ' ' + current.address + ' lat:' + current.latitude + ' lng:' + current.longitude + ' Phone Number: ' + current.phoneNumber}" />
 		</ul>
 	</div>
 
-<div class="lower-page-container">
-<div class="filter-sidebar">
-	<h3>Filters</h3>
-	<div class="schedule-filter">
-	<label>Start Time: <input name="startTime"/></label>
-	<label>End Time: <input name="endTime"/></label>
-	<button id="generateMarkersByTime" name="generateMarkersByTime">Find by Schedule</button>
-	<div id="schedule-content"></div>
+	<div class="lower-page-container">
+		<div class="filter-sidebar">
+			<h3>Filters</h3>
+			<div class="schedule-filter">
+				<label>Start Time: <input name="startTime" /></label> <label>End
+					Time: <input name="endTime" />
+				</label>
+				<button id="generateMarkersByTime" name="generateMarkersByTime">Find
+					by Schedule</button>
+			</div>
+			<div class="filter">
+				<label>Patio<input type="checkbox" name="patio"></input></label>
+				<button id="generateMarkersByFilter" name="generateMarkersByFilter">Find
+					by Filters</button>
+			</div>
+		</div>
+		<div id="googleMap"></div>
 	</div>
-</div>
-	<div id="googleMap"></div>
-</div>
 
-	<script
-  src="https://code.jquery.com/jquery-3.2.1.js"
-  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-  crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.js"
+		integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+		crossorigin="anonymous"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxlN41yXZT13zNWkyEbNue7sKeI5V8ZxI&amp;callback=initMap"></script>
