--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -31,6 +31,7 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
+	display: inline-block;
 }
 
 #googleMap {
