--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -49,8 +49,8 @@ body {
 }
 
 .navbar.opaque {
-    background-color: rgba(0, 0, 0, 1.0);
-    transition: background-color .5s ease 0s;
+	background-color: rgba(0, 0, 0, 1.0);
+	transition: background-color .5s ease 0s;
 }
 
 /* @media (max-width: 992px) {
@@ -63,7 +63,6 @@ body {
     height: 60px;
     transition: background-color .5s ease 0s;
 }*/
-
 .navbar ul {
 	display: inline-flex;
 	justify-content: space-between;
@@ -78,23 +77,19 @@ body {
 	color: white;
 }
 
- .gm-style .gm-style-iw {
+.gm-style .gm-style-iw {
 	background-color: white;
 	top: 0 !important;
-    left: 0 !important;
-    width: 100% !important;
-    min-height: 100% !important;
-   
-   
- 
-    padding-bottom: 10px;
-    
-    
-    
-	border: 1px solid black;
+	left: 0 !important;
+	width: 100% !important;
+	min-height: 120px !important;
+	padding-bottom: 10px;
+
+	/*
+    border: 1px solid black;
 	border-radius: 10px 10px 10px 10px;
-	
-} 
+	*/
+}
 
 .gm-style #iw-container .iw-title {
 	font-family: 'Open Sans Condensed', sans-serif;
@@ -104,12 +99,10 @@ body {
 	color: white;
 	background-color: black;
 	text-align: center;
-
 }
 
 .gm-style #iw-container {
-	padding-bottom: 55px;
-	width: 300px;
+	height: 100%;
 }
 
 .gm-style #iw-container .iw-content {
@@ -118,36 +111,46 @@ body {
 	font-weight: 400;
 	padding-left: 10px;
 	color: black;
-	
-	
+
 	/*
 	max-height: 140px;
 	padding: 15px 5px 20px 15px;
 	*/
 }
 
-.filter-list {
-	list-style: none;
+.gm-style .iw-img {
+	padding-right: 10px;
+	padding-top: 10px;
 }
 
-.filter-list li {
+.filter-conatiner {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-wrap: wrap;
+	align-items: center;
+	align-content: center;
+}
+
+.filter-list {
 	border: solid black 1px;
-    display: inline-block;
+	display: inline-block;
 	border-radius: 2px;
 	padding: 2px;
 	margin: 2px;
 	background-color: green;
 	color: white;
 	font-size: 10px;
-	
+	border-radius: 2px;
 }
 
-/*
-.gm-style .iw-container .iw-img {
-	width: 100%;
-	height: 150px;
-	margin: 0;
-	padding: 0;
+/*#iw-close-btn {
+	opacity: 1;
+	right: 38px;
+	top: 3px;
+	border: 7px solid #48b5e9;
+	border-radius: 13px;
+	box-shadow: 0 0 5px #3990B9;
 } */
 
 /*
@@ -162,5 +165,3 @@ body {
 	background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
 	background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
 } */
-
-
