--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -84,11 +84,6 @@ body {
 	width: 100% !important;
 	min-height: 120px !important;
 	padding-bottom: 10px;
-
-	/*
-    border: 1px solid black;
-	border-radius: 10px 10px 10px 10px;
-	*/
 }
 
 .gm-style #iw-container .iw-title {
@@ -111,11 +106,6 @@ body {
 	font-weight: 400;
 	padding-left: 10px;
 	color: black;
-
-	/*
-	max-height: 140px;
-	padding: 15px 5px 20px 15px;
-	*/
 }
 
 .gm-style .iw-img {
@@ -123,25 +113,26 @@ body {
 	padding-top: 10px;
 }
 
-.filter-conatiner {
+.filter-stuff {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
-	flex-wrap: wrap;
-	align-items: center;
-	align-content: center;
+	justify-content: space-between;
+	background-color: green;
+	color: white;
+	padding: 3px;
+	border: 1px solid black;
+	border-radius: 10px 10px 10px 10px;
 }
 
 .filter-list {
-	border: solid black 1px;
-	display: inline-block;
-	border-radius: 2px;
-	padding: 2px;
-	margin: 2px;
-	background-color: green;
-	color: white;
-	font-size: 10px;
-	border-radius: 2px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+footer {
+	display: flex;
+	justify-content: center;
 }
 
 /*#iw-close-btn {
