--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,11 +1,17 @@
 body {
 	padding: 0px;
 	margin: 0px;
+	font-family: 'Pathway Gothic One', sans-serif;
 }
 
 .header-pic {
 	width: 100%;
 	height: 700px;
+}
+
+.title {
+	display: flex;
+	justify-content: center;
 }
 
 .logo {
@@ -15,6 +21,7 @@ body {
 
 .lower-page-container {
 	display: flex;
+	justify-content: center;
 	align-items: center;
 }
 
@@ -24,8 +31,34 @@ body {
 	padding-left: 20px;
 	height: 500px;
 	width: 300px;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
+.filters {
+	display: flex;
+	justify-content: center;
+}
+
+.filter-container{
+	display: flex;
+	justify-content: space-between;
+}
+
+.noise-level {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	margin-right: 20px;
+	
+}
+
+.ambiance {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	margin-right: 20px;
+}
 .schedule-filter {
 	display: flex;
 	flex-direction: column;
@@ -37,6 +70,33 @@ body {
 	margin-left: 20px;
 	width: 600px;
 	height: 500px;
+}
+
+.style-select {
+	background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+	height: 29px;
+	overflow: hidden;
+	width: 240px;
+}
+
+.semi-square {
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
+
+.color {
+	background-color: lightgrey;
+}
+
+.style-select select {
+	background: transparent;
+	border: none;
+	font-size: 14px;
+	height: 29px;
+	padding: 5px;
+	/* If you add too much padding here, the options won't show in IE */
+	width: 268px;
 }
 
 .navbar {
@@ -84,11 +144,11 @@ body {
 	width: 100% !important;
 	min-height: 120px !important;
 	padding-bottom: 10px;
+	font-family: 'Pathway Gothic One', sans-serif;
 }
 
 .gm-style #iw-container .iw-title {
-	font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 22px;
+	font-size: 24px;
 	font-weight: 400;
 	padding: 10px;
 	color: white;
@@ -101,7 +161,7 @@ body {
 }
 
 .gm-style #iw-container .iw-content {
-	font-size: 13px;
+	font-size: 16px;
 	line-height: 18px;
 	font-weight: 400;
 	padding-left: 10px;
@@ -113,15 +173,22 @@ body {
 	padding-top: 10px;
 }
 
+.indent {
+	text-decoration: underline;
+}
+
 .filter-stuff {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	background-color: green;
+	margin-top: 5px;
+	margin-right: 5px;
+	background-color: grey;
 	color: white;
 	padding: 3px;
 	border: 1px solid black;
-	border-radius: 10px 10px 10px 10px;
+	border-radius: 5px;
+	box-shadow: 5px 2.5px 2.5px #888888;
 }
 
 .filter-list {
@@ -133,6 +200,10 @@ body {
 footer {
 	display: flex;
 	justify-content: center;
+}
+
+#resetMarkers {
+	margin: 5px;
 }
 
 /*#iw-close-btn {
