--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -71,7 +71,7 @@ body {
 }
 
 #googleMap {
-	z-index: -2;
+/* 	z-index: -2; */
 	margin-left: 20px;
 	width: 800px;
 	height: 700px;
@@ -131,7 +131,6 @@ body {
 	padding: 5px;
 	color: white;
 }
-
 
 .gm-style .gm-style-iw {
 	background-color: white;
@@ -194,7 +193,6 @@ body {
 	box-shadow: 5px 2.5px 2.5px #888888;
 }
 
-
 footer {
 	display: flex;
 	justify-content: center;
@@ -214,4 +212,3 @@ footer {
 	margin: 5px;
 	padding: 5px;
 }
-
