--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -19,6 +19,35 @@ body {
 	height: auto;
 }
 
+.navbar {
+	padding: 30px;
+	background-color: rgba(0, 0, 0, 0.5);
+	transition: background-color .5s ease 0s;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 1000;
+}
+
+.navbar.opaque {
+	background-color: rgba(0, 0, 0, 1.0);
+	transition: background-color .5s ease 0s;
+}
+
+.navbar ul {
+	display: inline-flex;
+	justify-content: space-between;
+	list-style: none;
+	position: absolute;
+	right: 150px;
+}
+
+.navbar ul li a {
+	text-decoration: none;
+	padding: 5px;
+	color: white;
+}
+
 .lower-page-container {
 	display: flex;
 	justify-content: center;
@@ -35,8 +64,9 @@ body {
 	overflow-y: scroll;
 }
 
-.filters {
+.filter {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 }
 
@@ -48,17 +78,17 @@ body {
 .noise-level {
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
-	margin-right: 20px;
-	
+	align-items: center;
+	margin-right: 25px;
 }
 
 .ambiance {
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
+	align-items: center;
 	margin-right: 20px;
 }
+
 .schedule-filter {
 	display: flex;
 	flex-direction: column;
@@ -99,44 +129,6 @@ body {
 	width: 268px;
 }
 
-.navbar {
-	padding: 30px;
-	background-color: rgba(0, 0, 0, 0.5);
-	transition: background-color .5s ease 0s;
-	position: fixed;
-	top: 0;
-	width: 100%;
-}
-
-.navbar.opaque {
-	background-color: rgba(0, 0, 0, 1.0);
-	transition: background-color .5s ease 0s;
-}
-
-/* @media (max-width: 992px) {
-  body
-  {
-    background:none;
-  }
-  .navbar {
-    background-color: black;
-    height: 60px;
-    transition: background-color .5s ease 0s;
-}*/
-.navbar ul {
-	display: inline-flex;
-	justify-content: space-between;
-	list-style: none;
-	position: absolute;
-	right: 150px;
-}
-
-.navbar ul li a {
-	text-decoration: none;
-	padding: 5px;
-	color: white;
-}
-
 .gm-style .gm-style-iw {
 	background-color: white;
 	top: 0 !important;
@@ -175,6 +167,7 @@ body {
 
 .indent {
 	text-decoration: underline;
+	padding-bottom: 5px;
 }
 
 .filter-stuff {
@@ -205,25 +198,55 @@ footer {
 #resetMarkers {
 	margin: 5px;
 }
+	
+/*background part of box*/
+.filter-box {
+  width: 15px;
+  height: 15px;
+  margin: 2px 0 2px -50px;
+  background: #ddd;
+  position: relative;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .5);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, .5);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .5);
+} 
 
-/*#iw-close-btn {
-	opacity: 1;
-	right: 38px;
-	top: 3px;
-	border: 7px solid #48b5e9;
-	border-radius: 13px;
-	box-shadow: 0 0 5px #3990B9;
-} */
+/*inner shape of box*/
+.filter-box label.inner {
+  display: block;
+  width: 10.75px;
+  height: 10.75px;
+  cursor: pointer;
+  position: absolute;
+  top: 2.125px;
+  left: 2.125px;
+  z-index: 1;
+  background: #eee;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .5);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .5);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .5);
+}
 
-/*
-.iw-bottom-gradient {
-	position: absolute;
-	width: 326px;
-	height: 25px;
-	bottom: 10px;
-	right: 18px;
-	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-	background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-	background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-	background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-} */
+/*space between words and boxes*/
+.filter-box label.outer {
+  margin-left: 25px;
+  word-wrap: no-wrap;
+}
+
+/*hiding old box*/
+.filter-box [type=checkbox] {
+  display: none
+}
+
+/*what happens when it's checked*/
+.green.filter-box input[type=checkbox]:checked+label.inner {
+  background: green;
+} 
+
+.green.filter-box {
+	display: flex;
+	justify-content: space-between;
+}
+
+
+
