--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -70,14 +70,15 @@ body {
 .noise-amb-container {
 	display: flex;
 	justify-content: space-between;
+	margin-top: 30px;
 }
 
 .noise-level {
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
-	margin-left: 21px;
-	margin-right: 10px;
+	align-items: center;
+	margin-left: 15px;
+	margin-right: 50px;
 }
 
 .ambiance {
