--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -207,6 +207,20 @@ body {
 	padding-bottom: 5px;
 }
 
+.web-icon img {
+    width: 21px;
+    height: 21px;	
+    border-radius: 7px;
+    margin-left: 8px;
+}
+
+.estab-icon img {
+    width: 20px;
+    height: 20px;	
+    border-radius: 8px;
+    margin-left: 8px;
+}
+
 .filter-list {
 	display: flex;
 	flex-direction: row;
