--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -169,9 +169,10 @@ body {
 	background-color: white;
 	top: 0 !important;
 	left: 0 !important;
-	width: 100% !important;
-/* 	min-height: 120px !important; */
+	width: auto !important;
+	min-height: 120px !important; 
 	font-family: 'Pathway Gothic One', sans-serif;
+	overflow: hidden !important;
 }
 
 .gm-style #iw-container .iw-title {
@@ -186,14 +187,20 @@ body {
 
 .gm-style #iw-container {
 	width: 100%;
+	height: 100%;
+}
 
+.gm-style .iw-photo {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .gm-style #iw-container .iw-content {
 	font-size: 16px;
 	line-height: 18px;
 	font-weight: 400;
-	padding-left: 10px;
+	text-align: center;
 	color: black;
 }
 
