--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -2,11 +2,19 @@ body {
 	padding: 0px;
 	margin: 0px;
 	font-family: 'Pathway Gothic One', sans-serif;
+	background-color: black;
+	background-image: url(images/cropped-clear-bottle.jpg);
+	background-position: left top;
+	background-repeat: no-repeat;
+	background-size: 300px;
+
+
 }
 
 .header-pic {
 	width: 100%;
-	height: 700px;
+	height: 400px;
+	margin-bottom: -100px;
 }
 
 .title {
@@ -15,7 +23,8 @@ body {
 }
 
 .logo {
-	width: 200px;
+	margin-top: 10px;
+	width: 300px;
 	height: auto;
 }
 
@@ -23,16 +32,14 @@ body {
 	padding: 30px;
 	background-color: rgba(0, 0, 0, 0.5);
 	transition: background-color .5s ease 0s;
-	position: fixed;
-	top: 0;
 	width: 100%;
 	z-index: 1000;
 }
 
-.navbar.opaque {
+/*  .navbar.opaque {
 	background-color: rgba(0, 0, 0, 1.0);
 	transition: background-color .5s ease 0s;
-}
+} */
 
 .navbar ul {
 	display: inline-flex;
@@ -52,6 +59,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin-top: -70px;
 }
 
 .filter-sidebar {
@@ -103,9 +111,8 @@ body {
 }
 
 #googleMap {
-/* 	z-index: -2; */
 	margin-left: 20px;
-	width: 800px;
+	width: 725px;
 	height: 700px;
 }
 
@@ -134,35 +141,6 @@ body {
 	padding: 5px;
 	/* If you add too much padding here, the options won't show in IE */
 	width: 268px;
-}
-
-.navbar {
-	padding: 30px;
-	background-color: rgba(0, 0, 0, 0.5);
-	transition: background-color .5s ease 0s;
-	position: fixed;
-	top: 0;
-	width: 100%;
-  z-index: 1000;
-}
-
-.navbar.opaque {
-	background-color: rgba(0, 0, 0, 1.0);
-	transition: background-color .5s ease 0s;
-}
-
-.navbar ul {
-	display: inline-flex;
-	justify-content: space-between;
-	list-style: none;
-	position: absolute;
-	right: 150px;
-}
-
-.navbar ul li a {
-	text-decoration: none;
-	padding: 5px;
-	color: white;
 }
 
 .gm-style .gm-style-iw {
