--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -29,7 +29,7 @@ body {
 	padding: 30px;
 	background-color: rgba(89, 26, 30, 0.5);
 	transition: background-color .5s ease 0s;
-	width: 100%;
+	width: 1860px;
 	position: absolute;
 }
 
